# athena-agent

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PKG-INFO  README.md  pyproject.toml
athena/agent/: llm.py  store.py
athena/tests/: test_data_spine.py  test_e2e_pipeline.py  test_runs_and_store.py  test_stats.py
athena/tools/data/: cache.py  ccxt_adapter.py  contract.py  delta_adapter.py  dhan_adapter.py  router.py  symbols.py
athena/tools/research/: backtest_bt.py  backtest_vbt.py  runs.py  stats.py
athena_agent.egg-info/: SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md  QUICKSTART.md
skills/: README.md  backtest-checklist.md
